Fix form header spacing

--- a/Responsive Web Design/Survey Form/styles.css
+++ b/Responsive Web Design/Survey Form/styles.css
@@ -165,7 +165,7 @@ main {
 
 #description {
   margin-top: -0.75rem;
-  /* margin-bottom: 2rem; */
+  margin-bottom: -0.25rem;
   text-align: center;
 }
 
